--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "react-redux": "^5.0.5",
     "react-slick": "^0.23.1",
     "redux": "^3.7.2",
+    "snyk": "^1.85.0",
+    "sqlite3": "^4.0.6",
     "striptags": "^3.1.1",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "webpack-dev-server": "^2.11.1",
-    "snyk": "^1.85.0"
+    "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.44",
