--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "export" : "next export",
     "precommit": "lint-staged",
     "dev": "yarn && node server.js",
     "clean": "rm -rf .next ./build ./coverage ./node_modules",
